# perc_gpu

./: B222009.docx  README.md  benchmark.sh  profile-compute.sh  profile-systems.sh  run.sh  ~$222009.docx
src/: CMakeLists.txt  perc_cpu.cpp  perc_cpu.h  perc_gpu.cu  perc_gpu.h  test.cpp  util.cpp  util.h
